<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PassVault</string>
    <string name="master_password">Master password</string>
    <string name="master_password_required_hint">Master password *</string>
    <string name="login">Log in</string>
    <string name="create_vault">Create vault</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_required_hint">Confirm password *</string>
    <string name="add_entry">Add entry</string>
    <string name="edit_entry">Edit entry</string>
    <string name="title">Title</string>
    <string name="title_required_hint">Title (required)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_required_hint">Password (required)</string>
    <string name="password_required">Password is required</string>
    <string name="token">Token</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="confirm_display_password">Are you sure you want to display the password?</string>
    <string name="more_info">More info</string>
    <string name="health">Health</string>
    <string name="generator">Generator</string>
    <string name="settings">Settings</string>
    <string name="export">Export</string>
    <string name="import_data">Import</string>
    <string name="change_master_password">Change master password</string>
    <string name="encryption_method">Encryption method</string>
    <string name="storage_type">Storage</string>
    <string name="storage_type_file">File (.dat)</string>
    <string name="storage_type_sql">SQL database</string>
    <string name="storage_switched">Storage type updated</string>
    <string name="logout">Logout</string>
    <string name="length">Length</string>
    <string name="generate">Generate</string>
    <string name="special_most_supported_only">Only most supported (!@#$%^&amp;*()+-=)</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="use">Use</string>
    <string name="days_used">Days in use</string>
    <string name="strength">Strength</string>
    <string name="value">Value</string>
    <string name="history">History</string>
    <string name="start_date">Creation date</string>
    <string name="update_date">Update date</string>
    <string name="start_date_days_exist">Creation date (%d days exist)</string>
    <string name="update_date_days_in_use">Update date (%d days in use)</string>
    <string name="reuse_check">Password reuse check</string>
    <string name="reuse_check_count_label">Check last X passwords</string>
    <string name="enforce_reuse">Enforce no reuse (block save if used before)</string>
    <string name="reuse_ok">Not used in last %d password(s)</string>
    <string name="reuse_warning">Already used in last %d password(s)</string>
    <string name="reuse_blocked">Choose a password not used in the last %d.</string>
    <string name="entries_count">%d entry(ies)</string>
    <string name="entries_count_filtered">%1$d of %2$d</string>
    <string name="search_by_title">Search by title</string>
    <!-- Prank / real wipe: wrong password messages -->
    <string name="prank_warn_next">Wrong password. The next wrong attempt will permanently delete all vault data.</string>
    <string name="prank_warn_next_n">Wrong password. %d more wrong attempts will permanently delete all vault data.</string>
    <string name="prank_deleted_mock">All vault data has been deleted. Hope it was worth it, detective.</string>
    <string name="settings_wrong_password">Wrong password</string>
    <string name="settings_wipe_after_attempts">Wipe after N failed attempts</string>
    <string name="settings_prank_only">Prank only (no real wipe)</string>
    <string name="settings_prank_only_summary">When on, wrong-password messages are fake. When off, vault is really wiped after N attempts.</string>
    <string-array name="prank_meaningless">
        <item>The vault is empty. Your efforts are noted. And pointless.</item>
        <item>Nothing to see here. Literally. You deleted it.</item>
        <item>Error 0xSnoop: access denied. Data wiped. Bye.</item>
        <item>Still trying? Cute. There\'s nothing left. Move on.</item>
    </string-array>
</resources>
